finished up till 5 a)

--- a/notebooks/keenan's notebook.ipynb
+++ b/notebooks/keenan's notebook.ipynb
@@ -114,12 +114,59 @@
      "inputWidgets": {},
      "nuid": "f09b0e63-10c6-4135-8ca9-794c03ec63cb",
      "showTitle": false,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1758944406587}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
      "title": ""
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql import functions as F\n",
+    "clean = clean.withColumn(\"trip_duration (m)\", F.round((F.col(\"tpep_dropoff_datetime\").cast(\"long\") -F.col(\"tpep_pickup_datetime\").cast(\"long\"))/60,2))\n",
+    "clean = clean.withColumn(\"trip_speed(mph)\", F.round((F.col(\"trip_distance\")/(F.col(\"trip_duration (m)\")/60)),2))\n",
+    "display(clean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e543a378-8abf-493e-88b7-76dd19600783",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1758946237175}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pyspark.pandas as ps\n",
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "psdf = clean.pandas_api()\n",
+    "psdf = psdf.groupby('passenger_count')[['fare_amount','trip_distance']].mean().reset_index()\n",
+    "display(psdf)"
+   ]
   }
  ],
  "metadata": {
