completed partb. 6a still needs work

--- a/notebooks/Obaid's Notebook.ipynb
+++ b/notebooks/Obaid's Notebook.ipynb
@@ -244,10 +244,11 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "clean = clean.filter(clean.trip_distance > 0.1)\n",
+    "\n",
     "bin_count = 50\n",
     "trip_distances = clean.select(\"trip_distance\").toPandas()[\"trip_distance\"]\n",
-    "\n",
-    "plt.figure(figsize=(9,5))\n",
+    "plt.figure(figsize=(10,6))\n",
     "sns.histplot(trip_distances, bins=bin_count, kde=True)\n",
     "plt.title(\"Trip Distance Distribution (miles)\")\n",
     "plt.xlabel(\"Trip distance (miles)\")\n",
@@ -290,6 +291,175 @@
     "plt.ylabel(\"Average fare (USD)\")\n",
     "plt.xticks(range(0,24))\n",
     "plt.tight_layout()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e57c2ec6-29c8-4356-bd78-c76f6cf1da15",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#b1\n",
+    "trip_duration_mins = clean.withColumn(\"trip_duration_mins\", F.round((F.col(\"tpep_dropoff_datetime\").cast(\"long\") -F.col(\"tpep_pickup_datetime\").cast(\"long\"))/60,2))\n",
+    "display(trip_duration_mins.select(\"trip_duration_mins\").show(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0cbead52-1532-4d46-9b40-059d50aceb77",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#b2\n",
+    "clean = clean.withColumn(\"pickup_hour\", F.hour(F.col(\"tpep_pickup_datetime\")))\n",
+    "clean = clean.withColumn(\"pickup_day\", F.dayofweek(F.col(\"tpep_pickup_datetime\"))) #mon = 1, sun = 7\n",
+    "display(clean)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a781c702-f201-4bea-953a-6d844f7f54ae",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#b4\n",
+    "avg_trip_duration_by_hour = clean.groupBy(\"pickup_hour\").agg(F.avg(\"trip_duration (m)\").alias(\"avg_trip_duration\"))\n",
+    "display(avg_trip_duration_by_hour)\n",
+    "\n",
+    "avg_trip_duration_by_hour_pd = avg_trip_duration_by_hour.toPandas()\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.bar(avg_trip_duration_by_hour_pd[\"pickup_hour\"], avg_trip_duration_by_hour_pd[\"avg_trip_duration\"])\n",
+    "plt.title(\"Average Trip Duration by Hour of Day\")\n",
+    "plt.xlabel(\"Hour of Day\")\n",
+    "plt.ylabel(\"Average Trip Duration (minutes)\")\n",
+    "plt.xticks(range(24))\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e98b84fe-c6d7-44fa-ae87-40cf8572b757",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#b5\n",
+    "#round coordinates for clustering\n",
+    "clean = clean.withColumn(\"pickup_lat_r\", F.round(\"pickup_latitude\", 2))\n",
+    "clean = clean.withColumn(\"pickup_lon_r\", F.round(\"pickup_longitude\", 2))\n",
+    "clean = clean.withColumn(\"dropoff_lat_r\", F.round(\"dropoff_latitude\", 2))\n",
+    "clean = clean.withColumn(\"dropoff_lon_r\", F.round(\"dropoff_longitude\", 2))\n",
+    "\n",
+    "#pickup coordinates count\n",
+    "pickup_hotspots = clean.groupBy(\"pickup_lat_r\", \"pickup_lon_r\").count().orderBy(F.desc(\"count\"))\n",
+    "display(pickup_hotspots)\n",
+    "\n",
+    "#dropoff coordinates count\n",
+    "dropoff_hotspots = clean.groupBy(\"dropoff_lat_r\", \"dropoff_lon_r\").count().orderBy(F.desc(\"count\"))\n",
+    "display(dropoff_hotspots)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8c818d0c-4222-45b8-ac1b-c80faeb7637d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#b6\n",
+    "avg_fare_by_pickup_location = clean.groupBy(\"pickup_lat_r\", \"pickup_lon_r\") \\\n",
+    "                                   .agg(F.avg(\"fare_amount\").alias(\"avg_fare\")) \\\n",
+    "                                   .orderBy(F.desc(\"avg_fare\"))\n",
+    "display(avg_fare_by_pickup_location)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2fdba673-cb21-484e-ba5c-452c719c9b4b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#b7\n",
+    "numeric_columns = [\"fare_amount\", \"trip_distance\", \"trip_duration (m)\", \"passenger_count\"]\n",
+    "corr_matrix = clean.select(numeric_columns).toPandas().corr()\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt='.2f')\n",
+    "plt.title(\"Correlation Matrix of Key Features\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
