--- a/notebooks/Obaid's Notebook.ipynb
+++ b/notebooks/Obaid's Notebook.ipynb
@@ -313,7 +313,7 @@
    "source": [
     "#b1\n",
     "trip_duration_mins = clean.withColumn(\"trip_duration_mins\", F.round((F.col(\"tpep_dropoff_datetime\").cast(\"long\") -F.col(\"tpep_pickup_datetime\").cast(\"long\"))/60,2))\n",
-    "display(trip_duration_mins.select(\"trip_duration_mins\").show(20))"
+    "display(trip_duration_mins.select(\"trip_duration_mins\").head(20))"
    ]
   },
   {
@@ -337,7 +337,7 @@
     "#b2\n",
     "clean = clean.withColumn(\"pickup_hour\", F.hour(F.col(\"tpep_pickup_datetime\")))\n",
     "clean = clean.withColumn(\"pickup_day\", F.dayofweek(F.col(\"tpep_pickup_datetime\"))) #mon = 1, sun = 7\n",
-    "display(clean)\n"
+    "display(clean.select(\"pickup_hour\", \"pickup_day\").head(20))"
    ]
   },
   {
@@ -392,7 +392,7 @@
    },
    "outputs": [],
    "source": [
-    "#b5\n",
+    "#b5 counting hotspots\n",
     "#round coordinates for clustering\n",
     "clean = clean.withColumn(\"pickup_lat_r\", F.round(\"pickup_latitude\", 2))\n",
     "clean = clean.withColumn(\"pickup_lon_r\", F.round(\"pickup_longitude\", 2))\n",
@@ -418,6 +418,44 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "45a05d6f-fe7d-45b0-b4c0-7d0823c92340",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#b5 visualization\n",
+    "pickup_pd = pickup_hotspots.toPandas()\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.scatterplot(data=pickup_pd, x=\"pickup_lon_r\", y=\"pickup_lat_r\", size=\"count\", hue=\"count\",\n",
+    "                alpha=0.6, legend=False, sizes=(20, 200))\n",
+    "plt.title(\"Pickup Hotspots\")\n",
+    "plt.xlabel(\"Longitude\")\n",
+    "plt.ylabel(\"Latitude\")\n",
+    "plt.show()\n",
+    "\n",
+    "dropoff_pd = dropoff_hotspots.toPandas()\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.scatterplot(data=dropoff_pd, x=\"dropoff_lon_r\", y=\"dropoff_lat_r\", size=\"count\", hue=\"count\",\n",
+    "                alpha=0.6, legend=False, sizes=(20, 200))\n",
+    "plt.title(\"Dropoff Hotspots\")\n",
+    "plt.xlabel(\"Longitude\")\n",
+    "plt.ylabel(\"Latitude\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "8c818d0c-4222-45b8-ac1b-c80faeb7637d",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -428,7 +466,8 @@
    "source": [
     "#b6\n",
     "avg_fare_by_pickup_location = clean.groupBy(\"pickup_lat_r\", \"pickup_lon_r\") \\\n",
-    "                                   .agg(F.avg(\"fare_amount\").alias(\"avg_fare\")) \\\n",
+    "                                   .agg(F.avg(\"fare_amount\").alias(\"avg_fare\"), F.count(\"*\").alias(\"n\")) \\\n",
+    "                                   .filter(\"n >= 200\") \\\n",
     "                                   .orderBy(F.desc(\"avg_fare\"))\n",
     "display(avg_fare_by_pickup_location)\n"
    ]
