--- a/notebooks/Obaid's Notebook.ipynb
+++ b/notebooks/Obaid's Notebook.ipynb
@@ -240,19 +240,36 @@
    },
    "outputs": [],
    "source": [
-    "#6a still needs fixing\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "#from pyspark.sql import functions as F\n",
+    "#import matplotlib.pyplot as plt\n",
     "\n",
-    "clean = clean.filter(clean.trip_distance > 0.1)\n",
+    "#bin for each mile distance,\n",
+    "bin_size = 1\n",
+    "max_cap = 50\n",
     "\n",
-    "bin_count = 50\n",
-    "trip_distances = clean.select(\"trip_distance\").toPandas()[\"trip_distance\"]\n",
+    "clean_binned = (clean\n",
+    "    .withColumn(\"distance_bin\",\n",
+    "        F.when(F.col(\"trip_distance\") >= max_cap, max_cap)\n",
+    "         .otherwise((F.col(\"trip_distance\")/bin_size).cast(\"int\") * bin_size)\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "bin_counts = (clean_binned\n",
+    "    .groupBy(\"distance_bin\")\n",
+    "    .count()\n",
+    "    .orderBy(\"distance_bin\")\n",
+    ")\n",
+    "\n",
+    "bin_pdf = bin_counts.toPandas()\n",
+    "print(bin_pdf.head())\n",
+    "\n",
+    "\n",
     "plt.figure(figsize=(10,6))\n",
-    "sns.histplot(trip_distances, bins=bin_count, kde=True)\n",
-    "plt.title(\"Trip Distance Distribution (miles)\")\n",
+    "plt.bar(bin_pdf[\"distance_bin\"], bin_pdf[\"count\"], width=1, align=\"edge\", edgecolor=\"black\")\n",
+    "plt.title(\"Distribution of Trip Distances (0–50+ miles)\")\n",
     "plt.xlabel(\"Trip distance (miles)\")\n",
-    "plt.ylabel(\"Count\")\n",
+    "plt.ylabel(\"Number of trips\")\n",
+    "plt.xticks(range(0, max_cap+5, 5))\n",
     "plt.show()"
    ]
   },
@@ -291,6 +308,40 @@
     "plt.ylabel(\"Average fare (USD)\")\n",
     "plt.xticks(range(0,24))\n",
     "plt.tight_layout()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "090838bd-2265-46f5-b007-4bf124e2a6f6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Step 7\n",
+    "\n",
+    "a) Peak Taxi Usage Times\n",
+    "\n",
+    "- Highest demand during morning (7–9 AM) and evening (5–8 PM) rush hours.\n",
+    "- Secondary peak after midnight (12–3 AM) linked to nightlife.\n",
+    "- Midday hours (10 AM–3 PM) show steady but lower activity.\n",
+    "\n",
+    "b) Trip Duration, Speed, and Fare\n",
+    "\n",
+    "- Most trips are short (1–5 miles) with fares typically under $20.\n",
+    "- Speeds are lowest during rush hours, making trips longer despite short distance.\n",
+    "- Long trips during congestion are disproportionately costly in both time and fare.\n",
+    "\n",
+    "c) Geography-Related Patterns\n",
+    "\n",
+    "- Manhattan has the highest concentration of pickups and short but expensive trips.\n",
+    "- Airport trips (JFK, LaGuardia) appear as long, higher-fare outliers.\n",
+    "- Outer borough trips are generally longer in distance but cheaper per mile."
    ]
   },
   {
