--- a/Assignment2_notebooks/Keenan_A2 2025-10-27 16_11_15.ipynb
+++ b/Assignment2_notebooks/Keenan_A2 2025-10-27 16_11_15.ipynb
@@ -59,6 +59,38 @@
      "inputWidgets": {},
      "nuid": "448320b9-1b65-46d1-b1e9-69abbf1e9e02",
      "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1761599891792}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT * FROM table\n",
+    "WHERE fare_amount > 1000;\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "476b2f37-c842-4d63-84d8-0094f8d01c9b",
+     "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
@@ -67,7 +99,35 @@
    "source": [
     "%sql\n",
     "SELECT * FROM table\n",
-    "LIMIT 10;"
+    "WHERE fare_amount <= 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ba30c310-84c2-4354-a45e-aea37eb24d40",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT corr(fare_amount, trip_distance) AS corr_fare_trip, corr(total_amount, trip_distance) AS corr_total_trip \n",
+    "FROM table\n",
+    "WHERE trip_distance BETWEEN 0.1 AND 75\n",
+    "AND fare_amount > 0\n",
+    "AND fare_amount <1000\n",
+    "AND total_amount BETWEEN 0.1 AND 1100;"
    ]
   }
  ],
@@ -83,7 +143,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4714025889969542,
+     "commandId": 6751756112482017,
      "dataframes": [
       "_sqldf"
      ]
