task 1 part 1 done

--- a/Assignment3_notebooks/keenan's notebook A3.ipynb
+++ b/Assignment3_notebooks/keenan's notebook A3.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import functions as F\n",
-    "from pyspark.sql.functions import radians, sin, cos, atan2, sqrt, lit\n",
+    "from pyspark.sql.functions import radians, sin, cos, atan2, sqrt\n",
     "R=3959 #radius of earth in miles\n",
     "df_clean=(\n",
     "    df\n",
@@ -89,6 +89,10 @@
     "\n",
     ")\n",
     "df_clean=df_clean.drop(\"pick_lat\", \"pick_long\", \"drop_lat\", \"drop_long\", \"lat_diff\", \"long_diff\", \"a\", \"c\")\n",
+    "\n",
+    "df_clean=df_clean.withColumn(\"high_fare\", F.when(df_clean.fare_amount >20,1).otherwise(0))\n",
+    "\n",
+    "train_df, test_df = df_clean.randomSplit([0.7,0.2], seed=42)\n",
     "display(df_clean)"
    ]
   }
