--- a/Assignment3_notebooks/Obaid's Notebook A3.ipynb
+++ b/Assignment3_notebooks/Obaid's Notebook A3.ipynb
@@ -118,8 +118,7 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.table(\"nyc_taxi.nyc_taxi_schema.yellow_trips_csv_v\")\n",
-    "df.createOrReplaceTempView(\"table\")\n",
+    "df = spark.read.table(\"nyc_taxi.nyc_taxi_schema.yellow_trips_csv_v\")\n",
     "display(df)\n",
     "df.printSchema()"
    ]
@@ -153,7 +152,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "8e03b8d7-2440-420f-a004-fd443a8bbe0c",
+     "nuid": "8304f7f0-9c85-4813-a685-8c995407ecc0",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -161,61 +160,122 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import (\n",
-    "    col, unix_timestamp, hour, dayofweek\n",
-    ")\n",
+    "from pyspark.sql import functions as F\n",
+    "from pyspark.sql.functions import radians, sin, cos, atan2, sqrt\n",
     "\n",
-    "#base dataset without junk column\n",
-    "df = df.drop(\"_rescued_data\")\n",
+    "R = 3959  #radius of earth in miles\n",
     "\n",
-    "#create useful features\n",
+    "#filter original df\n",
     "dfReg = (\n",
     "    df\n",
-    "    .withColumn(\"pickup_ts\",  unix_timestamp(\"tpep_pickup_datetime\"))\n",
-    "    .withColumn(\"dropoff_ts\", unix_timestamp(\"tpep_dropoff_datetime\"))\n",
-    "    .withColumn(\"trip_duration_min\", (col(\"dropoff_ts\") - col(\"pickup_ts\")) / 60.0)\n",
-    "    .withColumn(\"pickup_hour\", hour(\"tpep_pickup_datetime\"))\n",
-    "    .withColumn(\"pickup_dow\", dayofweek(\"tpep_pickup_datetime\"))\n",
+    "    .filter((F.col(\"fare_amount\") > 0) &\n",
+    "            (F.col(\"fare_amount\") < 500) &\n",
+    "            (F.col(\"trip_distance\") > 0))\n",
+    "    .withColumn(\"pickup_hour\", F.hour(\"tpep_pickup_datetime\"))\n",
+    "    .withColumn(\"pickup_dow\", F.dayofweek(\"tpep_pickup_datetime\"))\n",
+    "    .withColumn(\"pickup_ts\",  F.unix_timestamp(\"tpep_pickup_datetime\"))\n",
+    "    .withColumn(\"dropoff_ts\", F.unix_timestamp(\"tpep_dropoff_datetime\"))\n",
+    "    .withColumn(\"trip_duration_min\",\n",
+    "                (F.col(\"dropoff_ts\") - F.col(\"pickup_ts\")) / 60.0)\n",
     ")\n",
     "\n",
-    "#basic filtering\n",
+    "#remove bad durations and passenger counts\n",
     "dfReg = (\n",
     "    dfReg\n",
-    "    .filter(col(\"fare_amount\") > 0)\n",
-    "    .filter(col(\"trip_distance\") > 0)\n",
-    "    .filter(col(\"trip_duration_min\") > 0)\n",
-    "    .filter(col(\"passenger_count\") > 0)\n",
+    "    .filter(F.col(\"trip_duration_min\") > 0)\n",
+    "    .filter(F.col(\"passenger_count\") > 0)\n",
     ")\n",
     "\n",
-    "numericFeatures = [\n",
+    "#straight line distance\n",
+    "dfReg = (\n",
+    "    dfReg\n",
+    "    .withColumn(\"pick_lat\",  radians(F.col(\"pickup_latitude\")))\n",
+    "    .withColumn(\"pick_long\", radians(F.col(\"pickup_longitude\")))\n",
+    "    .withColumn(\"drop_lat\",  radians(F.col(\"dropoff_latitude\")))\n",
+    "    .withColumn(\"drop_long\", radians(F.col(\"dropoff_longitude\")))\n",
+    ")\n",
+    "\n",
+    "dfReg = (\n",
+    "    dfReg\n",
+    "    .withColumn(\"lat_diff\",  F.col(\"pick_lat\") - F.col(\"drop_lat\"))\n",
+    "    .withColumn(\"long_diff\", F.col(\"pick_long\") - F.col(\"drop_long\"))\n",
+    ")\n",
+    "\n",
+    "dfReg = (\n",
+    "    dfReg\n",
+    "    .withColumn(\n",
+    "        \"a\",\n",
+    "        sin(F.col(\"lat_diff\") / 2) ** 2\n",
+    "        + cos(F.col(\"pick_lat\")) * cos(F.col(\"drop_lat\"))\n",
+    "        * sin(F.col(\"long_diff\") / 2) ** 2\n",
+    "    )\n",
+    "    .withColumn(\"c\", 2 * atan2(sqrt(F.col(\"a\")), sqrt(1 - F.col(\"a\"))))\n",
+    ")\n",
+    "\n",
+    "dfReg = dfReg.withColumn(\n",
+    "    \"straight_line_distance\",\n",
+    "    F.col(\"c\") * F.lit(R)\n",
+    ")\n",
+    "\n",
+    "#drop helper columns used for calculations\n",
+    "dfReg = dfReg.drop(\n",
+    "    \"pick_lat\", \"pick_long\", \"drop_lat\", \"drop_long\",\n",
+    "    \"lat_diff\", \"long_diff\", \"a\", \"c\"\n",
+    ")\n",
+    "\n",
+    "#features that cant be null\n",
+    "featureCols = [\n",
     "    \"passenger_count\",\n",
     "    \"trip_distance\",\n",
     "    \"trip_duration_min\",\n",
     "    \"pickup_hour\",\n",
     "    \"pickup_dow\",\n",
-    "    \"extra\",\n",
-    "    \"mta_tax\",\n",
-    "    \"tip_amount\",\n",
-    "    \"tolls_amount\",\n",
-    "    \"improvement_surcharge\"\n",
+    "    \"straight_line_distance\"\n",
     "]\n",
     "\n",
-    "categoricalFeatures = [\n",
-    "    \"VendorID\",\n",
-    "    \"RateCodeID\",\n",
-    "    \"store_and_fwd_flag\",\n",
-    "    \"payment_type\"\n",
-    "]\n",
+    "labelCol = \"fare_amount\"\n",
     "\n",
-    "#remove nulls for cols used as features + label\n",
-    "colsToKeepNotNull = numericFeatures + categoricalFeatures + [\"fare_amount\"]\n",
+    "#drop if rows are null\n",
+    "dfReg = dfReg.na.drop(subset=featureCols)\n",
     "\n",
-    "dfReg = dfReg.na.drop(subset=colsToKeepNotNull)\n",
+    "#numeric features list for the model\n",
+    "numericFeatures = featureCols + [\"straight_line_distance\"]\n",
     "\n",
+    "print(\"Rows after cleaning:\", dfReg.count())\n",
+    "\n",
+    "#train/test split\n",
     "trainDf, testDf = dfReg.randomSplit([0.7, 0.3], seed=42)\n",
+    "print(\"Train rows:\", trainDf.count())\n",
+    "print(\"Test rows:\", testDf.count())\n",
     "\n",
-    "dfReg.printSchema()\n",
-    "display(dfReg)\n"
+    "#cross validation sample. Instructor approved\n",
+    "train_count = trainDf.count()\n",
+    "fraction = min(1.0, 100000.0 / float(train_count))\n",
+    "trainDfCv = trainDf.sample(withReplacement=False,\n",
+    "                           fraction=fraction,\n",
+    "                           seed=42)\n",
+    "print(\"Rows used for CV:\", trainDfCv.count())\n",
+    "\n",
+    "display(dfReg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "21ff0b0d-982e-4a17-a372-ef1757bff85a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Pipeline 1: Linear Regression"
    ]
   },
   {
@@ -240,25 +300,9 @@
     "from pyspark.ml.regression import LinearRegression\n",
     "from pyspark.ml import Pipeline\n",
     "\n",
-    "#index categoricals\n",
-    "indexers = [\n",
-    "    StringIndexer(\n",
-    "        inputCol=c,\n",
-    "        outputCol=c + \"_idx\",\n",
-    "        handleInvalid=\"keep\"\n",
-    "    )\n",
-    "    for c in categoricalFeatures\n",
-    "]\n",
-    "\n",
-    "#one-hot encode\n",
-    "encoder = OneHotEncoder(\n",
-    "    inputCols=[c + \"_idx\" for c in categoricalFeatures],\n",
-    "    outputCols=[c + \"_oh\" for c in categoricalFeatures]\n",
-    ")\n",
-    "\n",
     "#assemble all features\n",
     "assembler = VectorAssembler(\n",
-    "    inputCols=numericFeatures + [c + \"_oh\" for c in categoricalFeatures],\n",
+    "    inputCols=numericFeatures,\n",
     "    outputCol=\"features_unscaled\"\n",
     ")\n",
     "\n",
@@ -267,20 +311,20 @@
     "scaler = StandardScaler(\n",
     "    inputCol=\"features_unscaled\",\n",
     "    outputCol=\"features\",\n",
-    "    withMean=False, #True\n",
+    "    withMean=True, #True\n",
     "    withStd=True\n",
     ")\n",
     "\n",
     "#linear regression model\n",
     "lr = LinearRegression(\n",
     "    featuresCol=\"features\",\n",
-    "    labelCol=\"fare_amount\",\n",
+    "    labelCol=labelCol,\n",
     "    predictionCol=\"prediction\"\n",
     ")\n",
     "\n",
     "#full linear regression pipeline\n",
     "lrPipeline = Pipeline(\n",
-    "    stages=indexers + [encoder, assembler, scaler, lr]\n",
+    "    stages=[assembler, scaler, lr]\n",
     ")"
    ]
   },
@@ -308,14 +352,14 @@
     "#param grid\n",
     "paramGrid = (\n",
     "    ParamGridBuilder()\n",
-    "    .addGrid(lr.regParam, [0.0, 0.1]) # [0.0, 0.01, 0.1]\n",
-    "    .addGrid(lr.elasticNetParam, [0.0, 0.5]) # [0.0, 0.5, 1.0]\n",
-    "    .addGrid(lr.maxIter, [50]) # [50, 100]\n",
+    "    .addGrid(lr.regParam, [0.0, 0.0001, 0.001, 0.01])\n",
+    "    .addGrid(lr.elasticNetParam, [0.0, 0.25, 0.5])\n",
+    "    .addGrid(lr.maxIter, [50, 100])\n",
     "    .build()\n",
     ")\n",
     "\n",
     "evaluatorRmse = RegressionEvaluator(\n",
-    "    labelCol=\"fare_amount\",\n",
+    "    labelCol=labelCol,\n",
     "    predictionCol=\"prediction\",\n",
     "    metricName=\"rmse\"\n",
     ")\n",
@@ -324,9 +368,8 @@
     "    estimator=lrPipeline,\n",
     "    estimatorParamMaps=paramGrid,\n",
     "    evaluator=evaluatorRmse,\n",
-    "    numFolds=2,     #lower if needed\n",
-    "    parallelism=1,  #lower if needed\n",
-    "    collectSubModels=False\n",
+    "    numFolds=3,     #lower if needed\n",
+    "    parallelism=1  #lower if needed\n",
     ")"
    ]
   },
@@ -348,10 +391,222 @@
    },
    "outputs": [],
    "source": [
-    "cvLrModel = cvLr.fit(trainDf)\n",
+    "cvLrModel = cvLr.fit(trainDfCv)\n",
     "\n",
     "bestLrPipelineModel = cvLrModel.bestModel\n",
     "bestLrModel = bestLrPipelineModel.stages[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f8e9d94f-4a9b-45db-8683-d6fb9d93751f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#predictions on test set\n",
+    "testPredLr = bestLrPipelineModel.transform(testDf)\n",
+    "\n",
+    "#evaluation metrics\n",
+    "rmseTest = evaluatorRmse.evaluate(testPredLr)\n",
+    "evaluatorR2 = RegressionEvaluator(\n",
+    "    labelCol=labelCol,\n",
+    "    predictionCol=\"prediction\",\n",
+    "    metricName=\"r2\"\n",
+    ")\n",
+    "r2Test = evaluatorR2.evaluate(testPredLr)\n",
+    "\n",
+    "print(\"Linear Regression Evaluation Metrics:\")\n",
+    "print(\"RMSE:\", rmseTest)\n",
+    "print(\"R2:\", r2Test)\n",
+    "\n",
+    "#predictions vs actual\n",
+    "testPredLr.select(\"fare_amount\", \"prediction\").show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "65b67967-bded-4707-b95f-ed2dec404c53",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Best Linear Regression Hyperparameters\")\n",
+    "print(\"regParam:\", bestLrModel.getRegParam())\n",
+    "print(\"elasticNetParam:\", bestLrModel.getElasticNetParam())\n",
+    "print(\"maxIter:\", bestLrModel.getMaxIter())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "efd6cf9f-991f-43ea-b02f-416bc478713c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Pipeline 2: Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4fb844db-2b49-44d3-a4c7-4000a3049183",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.regression import RandomForestRegressor\n",
+    "\n",
+    "rf = RandomForestRegressor(\n",
+    "    featuresCol=\"features\",\n",
+    "    labelCol=labelCol,\n",
+    "    predictionCol=\"prediction\",\n",
+    "    seed=42\n",
+    ")\n",
+    "\n",
+    "rfPipeline = Pipeline(\n",
+    "    stages=[assembler, scaler, rf]\n",
+    ")\n",
+    "\n",
+    "rfparamGrid = (\n",
+    "    ParamGridBuilder()\n",
+    "    .addGrid(rf.numTrees, [50, 100])\n",
+    "    .addGrid(rf.maxDepth, [5, 10, 15])\n",
+    "    .build()\n",
+    ")\n",
+    "\n",
+    "rfCV = CrossValidator(\n",
+    "    estimator=rfPipeline,\n",
+    "    estimatorParamMaps=rfparamGrid,\n",
+    "    evaluator=evaluatorRmse, #same RMSE evaluator\n",
+    "    numFolds=3,     #lower if needed\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0dcab810-c1df-4694-9f2d-973cdc6351d6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "rfCvModel = rfCV.fit(trainDfCv)\n",
+    "\n",
+    "bestRfPipelineModel = rfCvModel.bestModel\n",
+    "bestRfModel = bestRfPipelineModel.stages[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bee58993-54e2-4a0c-8a16-7832cc344d8b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#predictions on test set\n",
+    "testPredRf = bestRfPipelineModel.transform(testDf)\n",
+    "\n",
+    "#evaluation metrics\n",
+    "rmseTest = evaluatorRmse.evaluate(testPredRf)\n",
+    "evaluatorR2 = RegressionEvaluator(\n",
+    "    labelCol=labelCol,\n",
+    "    predictionCol=\"prediction\",\n",
+    "    metricName=\"r2\"\n",
+    ")\n",
+    "r2Test = evaluatorR2.evaluate(testPredRf)\n",
+    "\n",
+    "print(\"Linear Regression Evaluation Metrics:\")\n",
+    "print(\"RMSE:\", rmseTest)\n",
+    "print(\"R2:\", r2Test)\n",
+    "\n",
+    "#predictions vs actual\n",
+    "testPredRf.select(\"fare_amount\", \"prediction\").show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0d2a1989-4a54-4ae0-b254-1e656fbefcb7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Best Random Forest Hyperparameters\")\n",
+    "print(\"numTrees:\", bestRfModel.getNumTrees())\n",
+    "print(\"maxDepth:\", bestRfModel.getMaxDepth())"
    ]
   }
  ],
