--- a/Assignment3_notebooks/Obaid's Notebook A3.ipynb
+++ b/Assignment3_notebooks/Obaid's Notebook A3.ipynb
@@ -229,8 +229,7 @@
     "    \"trip_distance\",\n",
     "    \"trip_duration_min\",\n",
     "    \"pickup_hour\",\n",
-    "    \"pickup_dow\",\n",
-    "    \"straight_line_distance\"\n",
+    "    \"pickup_dow\"\n",
     "]\n",
     "\n",
     "labelCol = \"fare_amount\"\n",
@@ -241,6 +240,10 @@
     "#numeric features list for the model\n",
     "numericFeatures = featureCols + [\"straight_line_distance\"]\n",
     "\n",
+    "# keep only features + label for modeling\n",
+    "used_cols = numericFeatures + [labelCol]\n",
+    "dfReg = dfReg.select(*used_cols).na.drop(subset=used_cols)\n",
+    "\n",
     "print(\"Rows after cleaning:\", dfReg.count())\n",
     "\n",
     "#train/test split\n",
@@ -250,7 +253,7 @@
     "\n",
     "#cross validation sample. Instructor approved\n",
     "train_count = trainDf.count()\n",
-    "fraction = min(1.0, 100000.0 / float(train_count))\n",
+    "fraction = min(1.0, 20000.0 / float(train_count))\n",
     "trainDfCv = trainDf.sample(withReplacement=False,\n",
     "                           fraction=fraction,\n",
     "                           seed=42)\n",
@@ -352,8 +355,8 @@
     "#param grid\n",
     "paramGrid = (\n",
     "    ParamGridBuilder()\n",
-    "    .addGrid(lr.regParam, [0.0, 0.0001, 0.001, 0.01])\n",
-    "    .addGrid(lr.elasticNetParam, [0.0, 0.25, 0.5])\n",
+    "    .addGrid(lr.regParam, [0.0, 0.01])\n",
+    "    .addGrid(lr.elasticNetParam, [0.0, 0.5])\n",
     "    .addGrid(lr.maxIter, [50, 100])\n",
     "    .build()\n",
     ")\n",
@@ -368,7 +371,7 @@
     "    estimator=lrPipeline,\n",
     "    estimatorParamMaps=paramGrid,\n",
     "    evaluator=evaluatorRmse,\n",
-    "    numFolds=3,     #lower if needed\n",
+    "    numFolds=2,     #lower if needed\n",
     "    parallelism=1  #lower if needed\n",
     ")"
    ]
@@ -456,7 +459,12 @@
     "print(\"Best Linear Regression Hyperparameters\")\n",
     "print(\"regParam:\", bestLrModel.getRegParam())\n",
     "print(\"elasticNetParam:\", bestLrModel.getElasticNetParam())\n",
-    "print(\"maxIter:\", bestLrModel.getMaxIter())"
+    "print(\"maxIter:\", bestLrModel.getMaxIter())\n",
+    "\n",
+    "#save the best model, might need to change depending on where youre saving it\n",
+    "bestLrModel.write().overwrite().save(\"/Volumes/nyc_taxi/nyc_taxi_schema/sparkml_cache\")\n",
+    "\n",
+    "print(\"Model saved successfully!\")"
    ]
   },
   {
@@ -606,7 +614,12 @@
    "source": [
     "print(\"Best Random Forest Hyperparameters\")\n",
     "print(\"numTrees:\", bestRfModel.getNumTrees())\n",
-    "print(\"maxDepth:\", bestRfModel.getMaxDepth())"
+    "print(\"maxDepth:\", bestRfModel.getMaxDepth())\n",
+    "\n",
+    "#save the best model, might need to change depending on where youre saving it\n",
+    "bestRfModel.write().overwrite().save(\"/Volumes/nyc_taxi/nyc_taxi_schema/sparkml_cache\")\n",
+    "\n",
+    "print(\"Model saved successfully!\")"
    ]
   }
  ],
